exports[`validateArity should throw a properly formatted warning when difference in expected and actual is not equal to 1 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- module/testModule.js --%c

testModule %cexpects a maximum of %c1 parameter%c. However, you passed %c4 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#testModule%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`validateArity should throw a warning when passed more arguments than needed 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- module/testModule.js --%c

testModule %cexpects a maximum of %c1 parameter%c. However, you passed %c2 parameters%c. This additional parameter was ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#testModule%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`validateArrity should throw a properly formatted warning when difference in expected and actual is not equal to 1 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- module/testModule.js --%c

testModule %cexpects a maximum of %c1 parameter%c. However, you passed %c4 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#testModule%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`validateArrity should throw a warning when passed more arguments than needed 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- module/testModule.js --%c

testModule %cexpects a maximum of %c1 parameter%c. However, you passed %c2 parameters%c. This additional parameter was ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#testModule%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
